# embedded_systems_smart_house

./: README.md  app.py
bins/: CMakeLists.txt  configure~  installer.sh  makefile
bins/inputs/: CMakeLists.txt  makefile
bins/inputs/include/: signal_verifier.h
bins/inputs/lib/: signal_verifier_lib.c
bins/inputs/src/: signal_verifier.c
bins/outputs/: CMakeLists.txt  makefile
bins/outputs/include/: signal_sender.h
bins/outputs/lib/: signal_sender_lib.c
bins/outputs/src/: signal_sender.c
bins/photo/: CMakeLists.txt  makefile
bins/photo/include/: photo.h
bins/photo/src/: photo.c
bins/webserver/: app.py  auth.py
bins/webserver/static/: casa.css  modelo.js
bins/webserver/templates/: index.html  layout.html  login.html
templates/: index.html
